# SDLOpenGL0

./: .gitignore  CMakeLists.txt
.github/workflows/: BuildDontRunWithoutCMakePresets.yml
SDLOpenGL/hdr/: OpenGLContext.hpp  SDLWindow.hpp
SDLOpenGL/src/: MainSDLOpenGL.cpp  OpenGLContext.cpp  SDLWindow.cpp
